#536: Fixed review findings of @kaklakariada.